--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "gatsby-remark-responsive-iframe": "^1.4.2",
     "gatsby-source-filesystem": "^1.4.2",
     "gatsby-transformer-remark": "^1.7.0",
+    "glamor": "^2.20.40",
+    "glamorous": "^4.12.1",
     "lodash": "^4.17.4",
     "lodash-webpack-plugin": "^0.11.4",
+    "lodash.groupby": "^4.6.0",
     "react": "^15.6.1",
     "react-disqus-comments": "^1.0.3",
     "react-dom": "^15.6.1",
